--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "report:generate": "marge cypress/reports/*.json -f report.html"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,11 @@
     "cypress": "^13.1.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^2.0.1",
-    "lighthouse": "^11.0.0"
+    "lighthouse": "^11.0.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-report-generator": "^6.2.0"
+  },
+  "dependencies": {
+    "cypress-mochawesome-reporter": "^3.7.0"
   }
 }
